# Libre-Apps

./: .gitignore  .prettierrc  .stylelintrc.cjs  CLAUDE.md  Cargo.toml  DESIGN-SYNC-TASKS.md  INVESTIGATION-LOG.md  OBSERVER-STATE.md  PORTING.md  README.md  SESSION-STATUS.md  TASKS.md  eslint.config.mjs  justfile  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
Business-OS/: ENGINEERING_STANDARDS.md
apps/: Cargo.toml  rustfmt.toml
apps/common/: Cargo.toml
apps/common-js/: COMPONENTS.md  package.json
apps/common-js/src/: index.js  theme.js  tokens.css
apps/common-js/src/api/: commands.ts  dialogs.ts
apps/common-js/src/components/: Button.svelte  Dialog.svelte  Input.svelte  Menu.svelte  TabBar.svelte  Titlebar.svelte  Toaster.svelte  Tooltip.svelte  WindowFrame.svelte
apps/common/src/: config.rs  lib.rs  media.rs  os.rs  xattr.rs
apps/fade/: io.librewin.fade.desktop  libre.manifest.json  package-lock.json  package.json  vite.config.js
apps/fade/src/: App.svelte  app.css
apps/fade/src-tauri/: Cargo.toml  tauri.conf.json
apps/fade/src-tauri/capabilities/: default.json
apps/fade/src-tauri/src/: lib.rs  main.rs
apps/fade/src/lib/: AudioOptions.svelte  ImageOptions.svelte  Queue.svelte  VideoOptions.svelte  utils.js
apps/fade/src/tests/: App.test.js  queue.test.js
apps/ghost/: index.html  io.librewin.ghost.desktop  libre.manifest.json  package-lock.json  package.json  vite.config.js  vitest.config.js
apps/ghost/src/: App.svelte  app.css
apps/ghost/src-tauri/: Cargo.toml  tauri.conf.json
apps/ghost/src-tauri/assets/: blocklist.json
apps/ghost/src-tauri/capabilities/: default.json  remote.json
apps/ghost/src-tauri/src/: lib.rs  main.rs
apps/ghost/src/lib/: brandColors.js
apps/ghost/src/tests/: App.test.js  privacy.test.js  setup.js
apps/prism/: index.html  io.librewin.prism.desktop  libre.manifest.json  package-lock.json  package.json  vite.config.js
apps/prism/src/: App.svelte  app.css
apps/prism/src-tauri/: Cargo.toml  tauri.conf.json
apps/prism/src-tauri/capabilities/: default.json
apps/prism/src-tauri/src/: lib.rs  main.rs
apps/prism/src/lib/: AudioPlayer.svelte  ImageViewer.svelte  MediaViewer.svelte  MetadataPanel.svelte  ModelViewer.svelte  PdfViewer.svelte  ShortcutsOverlay.svelte  VideoPlayer.svelte  shortcuts.js
apps/prism/src/tests/: App.test.js  shortcuts.test.js
apps/shelf/: .gitignore  README.md  index.html  io.librewin.shelf.desktop  libre.manifest.json  package-lock.json  package.json  vite.config.js  vitest.config.js
apps/shelf/src/: App.svelte  app.css
apps/shelf/src-tauri/: Cargo.toml  tauri.conf.json
apps/shelf/src-tauri/capabilities/: default.json
apps/shelf/src-tauri/src/: lib.rs  main.rs
apps/shelf/src/lib/: QuickFiles.svelte
apps/shelf/src/tests/: App.test.js  archive.test.js
apps/splice/: index.html  io.librewin.splice.desktop  package.json
apps/splice/src/: App.svelte
apps/splice/src-tauri/: Cargo.toml  tauri.conf.json
apps/splice/src-tauri/capabilities/: default.json
apps/splice/src-tauri/src/: lib.rs  main.rs
apps/splice/src/lib/: AudioOptions.svelte  Queue.svelte
apps/stack/: index.html  io.librewin.stack.desktop  libre.manifest.json  package-lock.json  package.json  vite.config.js  vitest.config.js
apps/stack/src/: App.svelte  app.css
apps/stack/src-tauri/: Cargo.toml  tauri.conf.json
apps/stack/src-tauri/capabilities/: default.json
apps/stack/src-tauri/src/: lib.rs  main.rs
apps/stack/src/lib/: utils.js
apps/stack/src/tests/: App.test.js  utils.test.js
common/: Cargo.toml
common-js/: COMPONENTS.md  package-lock.json  theme.js
common-js/scripts/: create-libre-app.js
common-js/src/: index.js  tokens.css
common-js/src/components/: BezierEditor.svelte  Checkbox.svelte  ColorWheel.svelte  Dialog.svelte  GlobalTabs.svelte  IconButton.svelte  Input.svelte  PanelTabs.svelte  ProgressBar.svelte  ScrollArea.svelte  SectionLabel.svelte  SegmentedControl.svelte  Select.svelte  Slider.svelte  Stepper.svelte  TabBar.svelte  Tabs.svelte  Timecode.svelte  Titlebar.svelte  Toast.svelte  Toggle.svelte  Tooltip.svelte  TrafficLight.svelte  Transport.svelte  WindowFrame.svelte
common/src/: config.rs  lib.rs  media.rs  os.rs  window.rs  xattr.rs
docs/: ROADMAP.md
docs/fade/: M1.md  M2.md  M3.md  M4.md
docs/ghost/: M1.md  M2.md  M3.md  M4.md
docs/prism/: M1.md  M2.md  M3.md  M4.md
docs/shelf/: M1.md  M2.md  M3.md  M4.md
docs/specs/: MANIFEST.md  SBOM.md  SIGNING.md  install-manager-cli-tracker.md
docs/splice/: M1.md  M2.md  M3.md  M4.md
docs/stack/: M1.md  M2.md  M3.md  M4.md
gallery/: index.html  package-lock.json  package.json  vite.config.js
gallery/src/: App.svelte  app.css  main.js
gallery/src-tauri/: Cargo.toml  tauri.conf.json
gallery/src-tauri/capabilities/: main.json
gallery/src-tauri/icons/: icon.icns
gallery/src-tauri/src/: lib.rs  main.rs
gallery/src/lib/: AppPanels.svelte  Card.svelte  MiniMap.svelte  ThemeLab.svelte  focus.svelte.js
gallery/src/lib/panels/: FadePanel.svelte  FlickerInspector.svelte  TurboTalkPanel.svelte
gallery/src/lib/stores/: canvas.svelte.js  tooltip.svelte.js  zoom.svelte.js
gallery/src/sections/: AudioSection.svelte  ButtonsSection.svelte  DemoTilesSection.svelte  FadeSection.svelte  FeedbackSection.svelte  FlickerSection.svelte  FormSection.svelte  LayoutSection.svelte  LibreWinSection.svelte  LoadingSection.svelte  MediaSection.svelte  MotionSection.svelte  NavigationSection.svelte  PatternsSection.svelte  PrismSection.svelte  ShelfSection.svelte  StackSection.svelte  TempSection.svelte  TokensSection.svelte  TypographySection.svelte  UIStandardsSection.svelte
keys/: ROTATION.md  librewin-releases-dev.pub  librewin-releases.pub
tasks/: TASK-5-stack-section.md
tasks/done/: TASK-1-flicker-section.md  TASK-2-fade-section.md  TASK-3-prism-section.md  TASK-4-shelf-section.md
