[workspace]
members = [
    "shelf/src-tauri",
    "stack/src-tauri",
    "prism/src-tauri",
    "fade/src-tauri",
    "ghost/src-tauri",
    "common",
]
resolver = "2"

[workspace.dependencies]
tauri           = { version = "2", features = [] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
librewin-common = { path = "common" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
