[workspace]
members = [
    "shelf/src-tauri",
    "stack/src-tauri",
    "prism/src-tauri",
    "fade/src-tauri",
    "ghost/src-tauri",
    "common",
]
resolver = "2"

[workspace.dependencies]
tauri           = { version = "2", features = [] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
librewin-common = { path = "common" }

# ── Workspace-level lint configuration ─────────────────────────────────────
# These levels apply to every crate in the workspace. The CI runs clippy
# with -D warnings (promotes warn → error) so new violations block CI.
# Use `continue-on-error: true` on the lint job while cleaning up.
[workspace.lints.clippy]
all                  = { level = "warn", priority = -1 }
unwrap_used          = "warn"   # prefer ? or expect() with a message
await_holding_lock   = "deny"   # must not hold Mutex across .await
needless_collect     = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
