[workspace]

[package]
name = "gallery"
version = "0.1.0"
description = "Libre UI Gallery — component reference app"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "gallery_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
librewin-common = { path = "../../common" }
