[package]
name = "fade"
version = "0.1.0"
description = "Fade — LibreWin media converter"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
librewin-common = { workspace = true }
uuid            = { version = "1", features = ["v4"] }
