[package]
name = "ghost"
version = "0.1.0"
description = "Ghost — LibreWin identity-randomizing browser"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ghost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
librewin-common = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }

