[package]
name = "prism"
version = "0.1.0"
description = "Prism — LibreWin all-in-one media viewer"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
librewin-common = { workspace = true }
kamadak-exif    = "0.5"
lopdf           = { version = "0.36", default-features = false }
rfd             = { version = "0.15", default-features = false, features = ["file-handle-inner"] }

