[package]
name = "shelf"
version = "0.1.0"
description = "Shelf — LibreWin file manager"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { workspace = true }
tauri-plugin-global-shortcut = "2"
serde                     = { workspace = true }
serde_json                = { workspace = true }
librewin-common           = { workspace = true, features = ["tags"] }
zip                       = "2"
sevenz-rust2              = "0.20"
tar                       = "0.4"
flate2                    = "1"
bzip2                     = "0.4"
xz2                       = "0.1"
rfd                       = "0.15"

