[package]
name = "stack"
version = "0.1.0"
description = "Stack — LibreWin markdown editor"
authors = ["LibreWin"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
librewin-common = { workspace = true }
rfd = "0.15"
pulldown-cmark = "0.12"
